--- a/_config.yml
+++ b/_config.yml
@@ -4,16 +4,16 @@
 
 # Site
 title: Z Blog
-subtitle: '记录我的学习日常'
-description: 'record myself'
-keywords: 
+subtitle: '记录我的技术学习日常'
+description: ''
+keywords:
 author: Vivian Chan
-language: zh-CN
+language: zh-cn
 timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://czVivi.github.io
+url: https://czvivi.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -66,7 +66,7 @@ index_generator:
   order_by: -date
 
 # Category & Tag
-default_category: uncategorized
+default_category: IT
 category_map:
 tag_map:
 
