--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: '记录我的技术学习日常'
 description: ''
 keywords:
 author: Vivian Chan
-language: zh-cn
+language: zh-CN
 timezone: 'Asia/Shanghai'
 
 # URL
